force-app/main/default/objects/Fact__c/Fact__c.object-meta.xml
<CustomObject>
    <label>Fact</label>
    <nameField>
        <label>Fact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Facts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>