force-app/main/default/objects/Fact__c/fields/Duration_in_minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_in_minutes__c</fullName>
    <label>Duration in minutes</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>