force-app/main/default/objects/Fact__c/fields/Produced__c.field-meta.xml
<CustomField>
    <fullName>Produced__c</fullName>
    <label>Produced (quantity)</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>