force-app/main/default/objects/Fact__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <label>Task</label>
    <referenceTo>Task__c</referenceTo>
    <relationshipLabel>Facts</relationshipLabel>
    <relationshipName>Facts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>