force-app/main/default/objects/Fact__c/recordTypes/Time_Fact.recordType-meta.xml
<RecordType>
    <fullName>Time_Fact</fullName>
    <active>true</active>
    <label>Time Task&apos;s Fact</label>
</RecordType>